[package]
name = "default-vec2"
keywords = ["data-structures", "bitset"]
version = "0.1.6"
edition = "2021"
description = "A simple `Vec`-like data structure with default elements and a bitset built using it"
license = "MIT"

[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }

[features]
serde-1 = ['serde']